--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
@@ -8,7 +8,9 @@
 
     <div class="col-md-9">
         <#include "infos_handler.html" />
-        <form action="jsp/site/Portal.jsp" class="form-horizontal" method="post" >               
+        <#include "errors_handler.html" />
+        
+        <form action="jsp/site/Portal.jsp" class="form-horizontal" method="post">               
             <fieldset>  	 		
                 <legend>
                     #i18n{pluginwizard.pluginwizard_create_plugin.pageTitle}      
@@ -16,17 +18,7 @@
 
                 <input type="hidden" name="page" value="pluginwizard" />			
                 <input type="hidden" name="action" value="createPlugin" />	
-
-                 <#include "errors_handler.html" />
-
-                <div class="form-group">
-                    <label class="col-md-2 control-label">#i18n{pluginwizard.pluginwizard_create_plugin.labelPluginName} :  </label>	
-                    <div class="col-md-8">
-                        <input type="text" class="form-control input-md" name="name" value="" />
-                        <span class="help-block">#i18n{pluginwizard.pluginwizard_create_plugin.labelPluginNameHelp}</span>
-                    </div>
-                </div>
-
+                
                 <div class="form-group">
                     <div class="col-md-8">
                         <h5>#i18n{pluginwizard.pluginwizard_create_plugin.labelSummary} :</h5>
@@ -45,11 +37,36 @@
                         </ul>
                     </div>
                 </div>
-
-                <div class="form-group col-md-8">                       
-                    <input class="btn btn-primary" name="do_create_plugin" value="#i18n{pluginwizard.pluginwizard_create_plugin.buttonCreatePlugin}" type="submit" />                        
-                </div>	
+                
+                <div class="form-group well">
+                    <h4>#i18n{pluginwizard.pluginwizard_create_plugin.createPlugin}</h4>
+                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin.labelPluginName} : </label>	
+                    <div class="col-md-5">
+                        <input type="text" class="form-control input-md" name="name" value="" />
+                        <span class="help-block">#i18n{pluginwizard.pluginwizard_create_plugin.labelPluginNameHelp}</span>
+                    </div>
+                    <div class="col-md-4">                       
+                        <input class="btn btn-primary" name="do_create_plugin" value="#i18n{pluginwizard.pluginwizard_create_plugin.buttonCreatePlugin}" type="submit" />                        
+                    </div>
+                </div>
+                
             </fieldset>
+        </form>	
+        
+        <form action="jsp/site/Portal.jsp" class="form-horizontal" method="post" enctype="multipart/form-data">
+            <input type="hidden" name="page" value="pluginwizard" />			
+            <input type="hidden" name="action" value="loadPlugin" />
+                
+            <div class="form-group well">
+                <h4>#i18n{pluginwizard.pluginwizard_create_plugin.loadPlugin}</h4>
+                <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin.labelPluginLoad} : </label>	
+                <div class="col-md-5">
+                    <input type="file" id="file" name="file" /> 
+                </div>
+                <div class="col-md-4">                       
+                    <input class="btn btn-primary" name="do_load_plugin" value="#i18n{pluginwizard.pluginwizard_create_plugin.buttonLoadPlugin}" type="submit" />                        
+                </div>
+            </div>
         </form>		 		
     </div>		 		
 </div>
