--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
@@ -130,6 +130,15 @@
                 </button>
             </form>
         </div>
+        <div class="well">
+            <form action="jsp/site/plugins/pluginwizard/DownloadJson.jsp" method="post">                
+                <input type="hidden" name="plugin_id" value="${plugin_id}" />
+                <button class="btn btn-success btn-lg" type="submit" >
+                    <i class="glyphicon glyphicon-download-alt">  </i>
+                    #i18n{pluginwizard.pluginwizard_plugin_recapitulate.buttonGenerateJson}
+                </button>
+            </form>
+        </div>
         <div class="alert alert-danger">
             #i18n{pluginwizard.pluginwizard_plugin_recapitulate.alertProperties}
         </div>
