fix swagger generation parameters

--- a/webapp/WEB-INF/templates/generators/default/rest/gt_rest_swagger.html
+++ b/webapp/WEB-INF/templates/generators/default/rest/gt_rest_swagger.html
@@ -47,7 +47,7 @@
                     <#list business_class.attributes as attribute>
                     {
                         "name": "${attribute.paramName?lower_case}",
-                        "in": "query",
+                        "in": "formData",
                         "description": "${attribute.paramName?lower_case}",
                         "required": true,
                         "type": "string"
@@ -128,7 +128,7 @@
                     <#list business_class.attributes as attribute>
                     {
                         "name": "${attribute.paramName?lower_case}",
-                        "in": "query",
+                        "in": "formData",
                         "description": "${attribute.paramName?lower_case}",
                         "required": true,
                         "type": "string"
