--- a/webapp/WEB-INF/templates/generators/default/rest/gt_rest_constants.html
+++ b/webapp/WEB-INF/templates/generators/default/rest/gt_rest_constants.html
@@ -45,9 +45,9 @@ public final class Constants
     public static final String ID = "id";
     
     public static final String SWAGGER_DIRECTORY_PATH = "/plugins/";
-    public static final String SWAGGER = "/swagger";
+    public static final String SWAGGER_PATH = "/swagger";
     public static final String SWAGGER_VERSION_PATH = "/v";
-    public static final String SWAGGER_PATH = "/swagger.json";
+    public static final String SWAGGER_JSON = "/swagger.json";
     
     public static final String EMPTY_OBJECT = "{}";
     public static final String ERROR_NOT_FOUND_VERSION = "Version not found";
