Fix name convention REST generation

--- a/webapp/WEB-INF/templates/generators/default/rest/gt_rest.html
+++ b/webapp/WEB-INF/templates/generators/default/rest/gt_rest.html
@@ -92,16 +92,16 @@ public class ${business_class.businessClass?cap_first}Rest
      */
     private Response get${business_class.businessClass?cap_first}ListV1( )
     {
-        List<${business_class.businessClass?cap_first}> list${business_class.businessClass?cap_first}s = ${business_class.businessClass?cap_first}Home.get${business_class.businessClass?cap_first}sList( );
+        List<${business_class.businessClass?cap_first}> _list${business_class.businessClass?cap_first}s = ${business_class.businessClass?cap_first}Home.get${business_class.businessClass?cap_first}sList( );
         
-        if( list${business_class.businessClass?cap_first}s.isEmpty( ) )
+        if( _list${business_class.businessClass?cap_first}s.isEmpty( ) )
         {
             return Response.status( Response.Status.NO_CONTENT )
                 .entity( JsonUtil.buildJsonResponse( new JsonResponse( Constants.EMPTY_OBJECT ) ) )
                 .build( );
         }
         return Response.status( Response.Status.OK )
-                .entity( JsonUtil.buildJsonResponse( new JsonResponse( list${business_class.businessClass?cap_first}s ) ) )
+                .entity( JsonUtil.buildJsonResponse( new JsonResponse( _list${business_class.businessClass?cap_first}s ) ) )
                 .build( );
     }
     
@@ -152,14 +152,14 @@ public class ${business_class.businessClass?cap_first}Rest
                     .build( );
         }
         
-        ${business_class.businessClass?cap_first} ${business_class.businessClass?lower_case} = new ${business_class.businessClass?cap_first}( );
+        ${business_class.businessClass?cap_first} _${business_class.businessClass?lower_case} = new ${business_class.businessClass?cap_first}( );
         <#list business_class.attributes as attribute>
-        ${business_class.businessClass?lower_case}.set${attribute.name?cap_first}( <#if attribute.type == 'int' >Integer.parseInt( ${attribute.paramName?lower_case} )<#else>${attribute.paramName?lower_case}</#if> );
+        _${business_class.businessClass?lower_case}.set${attribute.name?cap_first}( <#if attribute.type == 'int' >Integer.parseInt( ${attribute.paramName?lower_case} )<#else>${attribute.paramName?lower_case}</#if> );
         </#list>
-        ${business_class.businessClass?cap_first}Home.create( ${business_class.businessClass?lower_case} );
+        ${business_class.businessClass?cap_first}Home.create( _${business_class.businessClass?lower_case} );
         
         return Response.status( Response.Status.OK )
-                .entity( JsonUtil.buildJsonResponse( new JsonResponse( ${business_class.businessClass?lower_case} ) ) )
+                .entity( JsonUtil.buildJsonResponse( new JsonResponse( _${business_class.businessClass?lower_case} ) ) )
                 .build( );
     }
     
@@ -213,8 +213,8 @@ public class ${business_class.businessClass?cap_first}Rest
                     .build( );
         }
         
-        ${business_class.businessClass?cap_first} ${business_class.businessClass?lower_case} = ${business_class.businessClass?cap_first}Home.findByPrimaryKey( id );
-        if ( ${business_class.businessClass?lower_case} == null )
+        ${business_class.businessClass?cap_first} _${business_class.businessClass?lower_case} = ${business_class.businessClass?cap_first}Home.findByPrimaryKey( id );
+        if ( _${business_class.businessClass?lower_case} == null )
         {
             _logger.error( Constants.ERROR_NOT_FOUND_RESOURCE );
             return Response.status( Response.Status.NOT_FOUND )
@@ -223,12 +223,12 @@ public class ${business_class.businessClass?cap_first}Rest
         }
         
         <#list business_class.attributes as attribute>
-        ${business_class.businessClass?lower_case}.set${attribute.name?cap_first}( <#if attribute.type == 'int' >Integer.parseInt( ${attribute.paramName?lower_case} )<#else>${attribute.paramName?lower_case}</#if> );
+        _${business_class.businessClass?lower_case}.set${attribute.name?cap_first}( <#if attribute.type == 'int' >Integer.parseInt( ${attribute.paramName?lower_case} )<#else>${attribute.paramName?lower_case}</#if> );
         </#list>
-        ${business_class.businessClass?cap_first}Home.update( ${business_class.businessClass?lower_case} );
+        ${business_class.businessClass?cap_first}Home.update( _${business_class.businessClass?lower_case} );
         
         return Response.status( Response.Status.OK )
-                .entity( JsonUtil.buildJsonResponse( new JsonResponse( ${business_class.businessClass?lower_case} ) ) )
+                .entity( JsonUtil.buildJsonResponse( new JsonResponse( _${business_class.businessClass?lower_case} ) ) )
                 .build( );
     }
     
@@ -265,8 +265,8 @@ public class ${business_class.businessClass?cap_first}Rest
      */
     private Response delete${business_class.businessClass?cap_first}V1( Integer id )
     {
-        ${business_class.businessClass?cap_first} ${business_class.businessClass?lower_case} = ${business_class.businessClass?cap_first}Home.findByPrimaryKey( id );
-        if ( ${business_class.businessClass?lower_case} == null )
+        ${business_class.businessClass?cap_first} _${business_class.businessClass?lower_case} = ${business_class.businessClass?cap_first}Home.findByPrimaryKey( id );
+        if ( _${business_class.businessClass?lower_case} == null )
         {
             _logger.error( Constants.ERROR_NOT_FOUND_RESOURCE );
             return Response.status( Response.Status.NOT_FOUND )
@@ -314,8 +314,8 @@ public class ${business_class.businessClass?cap_first}Rest
      */
     private Response get${business_class.businessClass?cap_first}V1( Integer id )
     {
-        ${business_class.businessClass?cap_first} ${business_class.businessClass?lower_case} = ${business_class.businessClass?cap_first}Home.findByPrimaryKey( id );
-        if ( ${business_class.businessClass?lower_case} == null )
+        ${business_class.businessClass?cap_first} _${business_class.businessClass?lower_case} = ${business_class.businessClass?cap_first}Home.findByPrimaryKey( id );
+        if ( _${business_class.businessClass?lower_case} == null )
         {
             _logger.error( Constants.ERROR_NOT_FOUND_RESOURCE );
             return Response.status( Response.Status.NOT_FOUND )
@@ -324,7 +324,7 @@ public class ${business_class.businessClass?cap_first}Rest
         }
         
         return Response.status( Response.Status.OK )
-                .entity( JsonUtil.buildJsonResponse( new JsonResponse( ${business_class.businessClass?lower_case} ) ) )
+                .entity( JsonUtil.buildJsonResponse( new JsonResponse( _${business_class.businessClass?lower_case} ) ) )
                 .build( );
     }
 }
