Fix constants generation REST

--- a/webapp/WEB-INF/templates/generators/default/rest/gt_rest_constants.html
+++ b/webapp/WEB-INF/templates/generators/default/rest/gt_rest_constants.html
@@ -47,6 +47,7 @@ public final class Constants
     public static final String SWAGGER_DIRECTORY_PATH = "/plugins/";
     public static final String SWAGGER_PATH = "/swagger";
     public static final String SWAGGER_VERSION_PATH = "/v";
+    public static final String SWAGGER_REST_PATH = "rest/";
     public static final String SWAGGER_JSON = "/swagger.json";
     
     public static final String EMPTY_OBJECT = "{}";
