Fix SQL and REST generation
fix Not null attributes
fix the generation of the swaggerRest file

--- a/webapp/WEB-INF/templates/generators/default/xml/gt_xml_spring_context.html
+++ b/webapp/WEB-INF/templates/generators/default/xml/gt_xml_spring_context.html
@@ -6,7 +6,8 @@
 
 <#list plugin.businessClasses as business_class>
 <#if business_class?? >
-<#if plugin.getRest().getIdBusinessClasses() ??>
+    <bean id="${plugin.pluginName}.${business_class.businessClass?uncap_first}DAO" class="fr.paris.lutece.plugins.${plugin.pluginName}.business.${business_class.businessClass?cap_first}DAO" />
+<#if plugin.getRest().getIdBusinessClasses()?? && plugin.getRest().getIdBusinessClasses()?has_content>
 <#list plugin.getRest().getIdBusinessClasses() as id_business_class>
 <#if id_business_class == business_class.getId() >
     <bean id="${plugin.pluginName}.${business_class.businessClass?uncap_first}Rest" class="fr.paris.lutece.plugins.${plugin.pluginName}.rs.${business_class.businessClass?cap_first}Rest" />
@@ -17,14 +18,8 @@
 </#if>
 </#list>
 
-<#list plugin.businessClasses as business_class>
-<#if business_class?? > 
-    <bean id="${plugin.pluginName}.${business_class.businessClass?uncap_first}DAO" class="fr.paris.lutece.plugins.${plugin.pluginName}.business.${business_class.businessClass?cap_first}DAO" />  
-</#if>    
-</#list>
 <#list plugin.portlets as portlet>
 <#if portlet?? >
-
     <bean id="${plugin.pluginName}.${portlet.portletClass}DAO" class="fr.paris.lutece.plugins.${plugin.pluginName}.business.portlet.${portlet.portletClass}DAO" />    
 </#if>    
 </#list>
