--- a/webapp/WEB-INF/templates/generators/default/business/gt_business_dao.html
+++ b/webapp/WEB-INF/templates/generators/default/business/gt_business_dao.html
@@ -157,7 +157,7 @@ public final class ${business_class.businessClass}DAO implements I${business_cla
     @Override
     public List&lt;${business_class.businessClass}&gt; select${business_class.businessClass}sList( Plugin plugin )
     {
-        List&lt;${business_class.businessClass}&gt; ${business_class.instanceName}List = new ArrayList&lt;&gt;(  );
+        List&lt;${business_class.businessClass}&gt; ${business_class.instanceName}List = new ArrayList&lt;${business_class.businessClass}&gt;(  );
         DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECTALL, plugin );
         daoUtil.executeQuery(  );
 
@@ -184,7 +184,7 @@ public final class ${business_class.businessClass}DAO implements I${business_cla
     @Override
     public List&lt;Integer&gt; selectId${business_class.businessClass}sList( Plugin plugin )
     {
-        List&lt;Integer&gt; ${business_class.instanceName}List = new ArrayList&lt;&gt;( );
+        List&lt;Integer&gt; ${business_class.instanceName}List = new ArrayList&lt;Integer&gt;( );
         DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECTALL_ID, plugin );
         daoUtil.executeQuery(  );
 
